syntax = "proto3";

package com.andrew.rental;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum Role {
  OWNER = 0;
  CLIENT = 1;
}

message GetRequest {
  string id = 1;
}

message UsersShort {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string login = 5;
  string password_hash = 6;
  google.protobuf.Timestamp created_at = 7;
  Role role = 8;
}


service UserService {
  rpc shortGet(GetRequest) returns (UsersShort);
}
